@@ -874,3 +874,148 @@ Command line:
 -XX:+PrintGC
 ```
 
+
+
+## JVM查看运行时参数
+
+ **打印命令行参数**
+
+```shell
+[root@iz2ze2e5wmatyx36v5jw5lz ~]# java -XX:+PrintCommandLineFlags -version
+-XX:InitialHeapSize=30115776 -XX:MaxHeapSize=481852416 -XX:+PrintCommandLineFlags -XX:+UseCompressedClassPointers -XX:+UseCompressedOops
+java version "1.8.0_201"
+Java(TM) SE Runtime Environment (build 1.8.0_201-b09)
+Java HotSpot(TM) 64-Bit Server VM (build 25.201-b09, mixed mode)
+```
+
+**打印初始参数**
+
+```shell
+java -XX:+PrintFlagsInitial -version
+```
+
+**查看最终值**
+
+```shell
+java -XX:+PrintFlagsFinal -version
+```
+
+
+
+## 生产级JVM参数配置
+
+```
+//4核心8G内存配置 
+-Xms4g 
+-Xmx4g 
+-Xmn2g 
+-XX:MetaspaceSize=256M 
+-XX:MaxMetaspaceSize=256M 
+-XX:ReservedCodeCacheSize=256M
+-XX:MaxDirectMemorySize=1g 
+
+ 
+//8核16G内存配置
+-Xms10g 
+-Xmx10g 
+-Xmn6g 
+-XX:MetaspaceSize=512M 
+-XX:MaxMetaspaceSize=512M 
+-XX:ReservedCodeCacheSize=512M
+-XX:MaxDirectMemorySize=1g 
+
+
+
+// Tuning JVM  for Production Deployments
+// > java8
+// 生产环境推荐
+-server 
+-Xms24G
+-Xmx24G
+-XX:PermSize=512m
+-XX:+UseG1GC 
+-XX:MaxGCPauseMillis=200 
+-XX:ParallelGCThreads=20 
+-XX:ConcGCThreads=5 
+-XX:InitiatingHeapOccupancyPercent=70
+
+// 从服务器推荐
+-server 
+-Xms4G 
+-Xmx4G 
+-XX:PermSize=512m 
+-XX:+UseG1GC 
+-XX:MaxGCPauseMillis=200 
+-XX:ParallelGCThreads=20 
+-XX:ConcGCThreads=5 
+-XX:InitiatingHeapOccupancyPercent=70
+
+// 独立服务器
+-server 
+-Xms32G 
+-Xmx32G 
+-XX:PermSize=512m 
+-XX:+UseG1GC 
+-XX:MaxGCPauseMillis=200 
+-XX:ParallelGCThreads=20 
+-XX:ConcGCThreads=5 
+-XX:InitiatingHeapOccupancyPercent=70
+
+// http://www.51gjie.com/java/551.html
+// For JDK 1.7⁄ 1.8 (8GB heap example for machine with 32 CPUs):
+-server // 服务器模式
+-Xms8g // JVM初始分配的堆内存，一般和Xmx配置成一样以避免每次gc后JVM重新分配内存
+-Xmx8g // JVM最大允许分配的堆内存，按需分配
+-XX:+UseParNewGC // 年轻代垃圾收集器
+-XX:+UseConcMarkSweepGC // 并发标记清除（CMS）收集器 (年老代)
+-XX:+UseTLAB 
+-XX:NewSize=128m // 年轻代大小
+-XX:MaxNewSize=128m // 最大年轻代大小
+-XX:MaxTenuringThreshold=2 // 提升年老代的最大临界值,JDK8里CMS 默认是6，其他如G1是15
+-XX:SurvivorRatio=8  // Eden区与Survivor区的大小比值
+-XX:+UseCMSInitiatingOccupancyOnly  //使用手动定义初始化定义开始CMS收集
+-XX:CMSInitiatingOccupancyFraction=40 //使用cms作为垃圾回收使用40％后开始CMS收集
+-XX:MaxGCPauseMillis=1000 // 用户设定的最大gc 停顿时间1000ms
+-XX:InitiatingHeapOccupancyPercent=50 // heap中50%的容量被使用，则会触发concurrent gc
+-XX:+UseCompressedOops
+-XX:ParallelGCThreads=8 // 设置垃圾收集器在并行阶段使用的线程数,默认值随JVM运行的平台不同而不同.
+-XX:ConcGCThreads=8 
+-XX:+DisableExplicitGC // 忽略手动调用GC, System.gc()的调用就会变成一个空调用，完全不触发GC
+
+
+```
+
+
+
+## JVM参数设置优化例子
+
+**1. 承受海量访问的动态Web应用**
+
+
+
+服务器配置：8 CPU, 8G MEM, JDK 1.6.X
+参数方案：
+-server -Xmx3550m -Xms3550m -Xmn1256m -Xss128k -XX:SurvivorRatio=6 -XX:MaxPermSize=256m -XX:ParallelGCThreads=8 -XX:MaxTenuringThreshold=0 -XX:+UseConcMarkSweepGC
+调优说明：
+-Xmx 与 -Xms 相同以避免JVM反复重新申请内存。-Xmx 的大小约等于系统内存大小的一半，即充分利用系统资源，又给予系统安全运行的空间。
+-Xmn1256m 设置年轻代大小为1256MB。此值对系统性能影响较大，Sun官方推荐配置年轻代大小为整个堆的3/8。
+-Xss128k 设置较小的线程栈以支持创建更多的线程，支持海量访问，并提升系统性能。
+-XX:SurvivorRatio=6 设置年轻代中Eden区与Survivor区的比值。系统默认是8，根据经验设置为6，则2个Survivor区与1个Eden区的比值为2:6，一个Survivor区占整个年轻代的1/8。
+-XX:ParallelGCThreads=8 配置并行收集器的线程数，即同时8个线程一起进行垃圾回收。此值一般配置为与CPU数目相等。
+-XX:MaxTenuringThreshold=0 设置垃圾最大年龄（在年轻代的存活次数）。如果设置为0的话，则年轻代对象不经过Survivor区直接进入年老代。对于年老代比较多的应用，可以提高效率；如果将此值设置为一个较大值，则年轻代对象会在Survivor区进行多次复制，这样可以增加对象再年轻代的存活时间，增加在年轻代即被回收的概率。根据被海量访问的动态Web应用之特点，其内存要么被缓存起来以减少直接访问DB，要么被快速回收以支持高并发海量请求，因此其内存对象在年轻代存活多次意义不大，可以直接进入年老代，根据实际应用效果，在这里设置此值为0。
+-XX:+UseConcMarkSweepGC 设置年老代为并发收集。CMS（ConcMarkSweepGC）收集的目标是尽量减少应用的暂停时间，减少Full GC发生的几率，利用和应用程序线程并发的垃圾回收线程来标记清除年老代内存，适用于应用中存在比较多的长生命周期对象的情况。
+
+
+
+**2. 内部集成构建服务器案例**
+
+
+
+高性能数据处理的工具应用
+服务器配置：1 CPU, 4G MEM, JDK 1.6.X
+参数方案：
+-server -XX:PermSize=196m -XX:MaxPermSize=196m -Xmn320m -Xms768m -Xmx1024m
+调优说明：
+-XX:PermSize=196m -XX:MaxPermSize=196m 根据集成构建的特点，大规模的系统编译可能需要加载大量的Java类到内存中，所以预先分配好大量的持久代内存是高效和必要的。
+-Xmn320m 遵循年轻代大小为整个堆的3/8原则。
+-Xms768m -Xmx1024m 根据系统大致能够承受的堆内存大小设置即可。
